2014-02-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Dumps.pm: Fix documentation.

2014-02-04  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c, ndmp-src/ndmpconnobj.c,
	  ndmp-src/ndmpconnobj.h: Undo previous patch.
	* device-src/ndmp-device.c: ndmp_connection_wait_for_notify_with_cond
	  returning 1 is a valid result.

2014-02-04  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: Call ndmp_connection_mover_get_state
	  before calling ndmp_connection_wait_for_notify_with_cond to verify
	  the mover state.
	* ndmp-src/ndmpconnobj.c (ndmp_connection_mover_get_state): Return
	  pause_reason and halt_reason
	* ndmp-src/ndmpconnobj.h (ndmp_connection_mover_get_state): Change
	  prototype.

2014-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amlabel.pl: Fix.

2014-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (get_storage_list): New function.
	* common-src/conffile.h (get_storage_list): Add prototype.
	* perl/Amanda/Config.swg (get_storage_list): Swig function.
	* perl/Amanda/Changer/aggregate.pm,
	  perl/Amanda/Changer/multi.pm
	  perl/Amanda/Changer/robot.pm: Fix for some arguments.
	* perl/Amanda/Curinfo/Info.pm: Fix.
	* perl/Amanda/DB.pm: New module.
	* perl/Amanda/Label.pm: Add messages.
	* perl/Amanda/Message.pm: Add messages.
	* perl/Amanda/Rest.pm: New module.
	* perl/Amanda/Rest/Amdump.pm: Fix message.
	* perl/Amanda/Rest/Configs.pm, perl/Amanda/Rest/Dles.pm,
	  perl/Amanda/Rest/Dumps.pm, perl/Amanda/Rest/Labels.pm,
	  perl/Amanda/Rest/Runs.pm, perl/Amanda/Rest/Status.pm,
	  perl/Amanda/Rest/Storages.pm, perl/Amanda/Rest/Storages/Labels.pm,
	  perl/Amanda/Rest/Version.pm: Implement REST API and document it.
	* perl/Amanda/ScanInventory.pm: Fix.
	* perl/Amanda/Tapelist.swg: Fix messages.
	* perl/Makefile.am: Add Amanda/DB.pm and Amanda/Rest.pm.

2014-01-30  Jean-Louis Martineau <martineau@zmanda.com>